--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,4 @@
 inventory = ./inventory.json
 retry_files_enabled = False
 roles_path = roles:./roles
+collections_paths = ./collections/ansible_collections
