--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,2 +1,8 @@
+---
+roles:
+  - name: elliotweiser.osx-command-line-tools
+  - name: geerlingguy.dotfiles
+
 collections:
   - name: chocolatey.chocolatey
+  - name: geerlingguy.mac
