Fixing small bugs

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
-inventory = ./inventory.json
 retry_files_enabled = False
 roles_path = roles:./roles
 collections_paths = ./collections/ansible_collections
+
+[inventory]
+enable_plugins = host_list, script, yaml, ini
