--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,8 +1,14 @@
 ---
-- name: Collect host facts
-  hosts: all
-  gather_facts: yes
-  tasks:
-    - name: Display host facts
-      debug:
-        var: ansible_facts
+
+#- name: Collect host facts
+#  hosts: all
+#  gather_facts: yes
+#  tasks:
+#    - name: Display host facts
+#      debug:
+#        var: ansible_facts
+
+- hosts: all
+
+roles:
+    - role: ddev
