Adding ddev role

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,9 @@
 [defaults]
-retry_files_enabled = False
-roles_path = roles:./roles
-collections_paths = ./collections/ansible_collections
+retry_files_enabled=False
+roles_path=./roles
+;roles_path={{ ANSIBLE_HOME ~ "/roles:/usr/share/ansible/roles:/etc/ansible/roles" }}
+collections_paths=./collections
+;collections_path={{ ANSIBLE_HOME ~ "/collections:/usr/share/ansible/collections" }}
 
 [inventory]
-enable_plugins = host_list, script, yaml, ini
+enable_plugins=host_list, script, yaml, ini
