--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 retry_files_enabled=False
-roles_path=./roles
+roles_path={{ ANSIBLE_HOME ~ "/roles:/usr/share/ansible/roles:/etc/ansible/roles:./roles" }}
 ;roles_path={{ ANSIBLE_HOME ~ "/roles:/usr/share/ansible/roles:/etc/ansible/roles" }}
-collections_paths=./collections
+;collections_paths=./collections
 ;collections_path={{ ANSIBLE_HOME ~ "/collections:/usr/share/ansible/collections" }}
 
 [inventory]
