Fixing small bugs

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
+inventory=./inventory.json
+playbook_dir=./
 retry_files_enabled=False
 roles_path=~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:./roles
 ;roles_path={{ ANSIBLE_HOME ~ "/roles:/usr/share/ansible/roles:/etc/ansible/roles" }}
