--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,8 +2,10 @@
 
 roles:
   - name: elliotweiser.osx-command-line-tools
+  - name: gantsign.visual-studio-code
 #  - name: geerlingguy.dotfiles
 
 collections:
   - name: chocolatey.chocolatey
   - name: geerlingguy.mac
+  - name: drew1kun.fancyfonts
