--- a/ansible/roles/ddev/meta/main.yml
+++ b/ansible/roles/ddev/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Oliver Heinemann
+  description: Install DDEV development environment
+  company: Oliver Heinemann | Web-Entwicklung & Beratung
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -50,5 +50,3 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
-collections:
-  - geerlingguy.mac
