Fixing small bugs

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -5,6 +5,7 @@
   roles:
     - role: ddev
     - role: geerlingguy.mac.homebrew
+    - role: tedgonzalez.xcodeinstall
     - role: drew1kun.fancyfonts.nerdfonts
     - role: gantsign.visual-studio-code
 
