--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,6 +2,7 @@
 roles:
   - name: elliotweiser.osx-command-line-tools
   - name: gantsign.visual-studio-code
+  - name: tedgonzalez.xcodeinstall
 
 collections:
   - name: chocolatey.chocolatey
