Fixing small bugs

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -3,6 +3,8 @@ roles:
   - name: elliotweiser.osx-command-line-tools
   - name: gantsign.visual-studio-code
   - name: macstadium.xcode
+  - name: tomereli.oh-my-zsh-p10k
+  - name: lwalley.iterm2
 
 collections:
   - name: chocolatey.chocolatey
