Fixing small bugs

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -2,8 +2,7 @@
 roles:
   - name: elliotweiser.osx-command-line-tools
   - name: gantsign.visual-studio-code
-  - name: macstadium.xcode
-  - name: tomereli.oh-my-zsh-p10k
+  - name: tomereli.oh_my_zsh_p10k
 #  - name: lwalley.iterm2
 
 collections:
