Fixing small bugs

--- a/ansible/roles/terminal/tasks/main.yml
+++ b/ansible/roles/terminal/tasks/main.yml
@@ -3,9 +3,5 @@
 - name: "[main] Include {{ ansible_os_family }}-specific tasks"
   ansible.builtin.include_tasks: "{{ ansible_os_family|lower }}.yml"
 
-- name: "[main] Include tomereli.oh-my-zsh-p10k role"
-  ansible.builtin.include_role: 
-    name: tomereli.oh-my-zsh-p10k
-  vars:
-    users:
-      - username: "{{ ansible_user_id }}"
+- name: "[main] Install oh-my-zsh and powerLevel10k"
+  ansible.builtin.include_tasks: "oh-my-zsh.yml"
