--- a/ansible/roles/terminal/meta/main.yml
+++ b/ansible/roles/terminal/meta/main.yml
@@ -47,6 +47,5 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies:
-  - role: tomereli.oh_my_zsh_p10k
+dependencies: []
  # - role: lwalley.iterm2
