--- a/ansible/roles/terminal/tasks/darwin.yml
+++ b/ansible/roles/terminal/tasks/darwin.yml
@@ -7,8 +7,7 @@
   community.general.homebrew_cask:
     name: "{{ item }}"
     state: present
-  with_nested:
-    - "{{ terminal_apps }}"
+  with_items: "{{ terminal_apps }}"
   register: result
   failed_when:
     - result.failed
