--- a/ansible/roles/ddev/tasks/install-homebrew.yml
+++ b/ansible/roles/ddev/tasks/install-homebrew.yml
@@ -14,3 +14,8 @@
   community.general.homebrew:
     name: mkcert
     state: present
+
+- name: Install nss
+  community.general.homebrew:
+    name: nss
+    state: present
